added header, main, footer

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             <a class="logo" href="./index.html">
                 <img src="./img/logo.svg" alt="Logo" width="93" height="44"/>
             </a>
+            <form>
+                <button type="submit"></button>
+                <input type="search" placeholder="Search store" class="searchbar">
+            </form>
+
             <nav class="menu">
                 <ul class="menu__list">
                     <li class="menu__item"><a class="menu__link" href="#">products</a></li>
@@ -111,6 +116,7 @@
 </main>
 <footer class="footer-box">
     <div class="container">
+        <button type="button"></button>
         <a class="help" href="#">Help Center</a>
     </div>
 </footer>
