--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </div>
         <div class="header-box">
             <div class="search-wrap">
-                    <button class="search-btn" type="submit"></button>
-                    <input class="searchbar" type="search" placeholder="Search store">
+                <button class="search-btn" type="submit"></button>
+                <input class="searchbar" type="search" placeholder="Search store">
             </div>
             <div class="menu-wrap">
                 <nav class="menu">
@@ -86,13 +86,13 @@
         <aside class="sidebar">
             <h2 class="sidebar-title">Explore</h2>
             <ul class="sidebar__list">
-                <li class="sidebar__item"><a class="sidebar__link" href="#">New In</a></li>
-                <li class="sidebar__item"><a class="sidebar__link" href="#">Clothing</a></li>
-                <li class="sidebar__item"><a class="sidebar__link" href="#">Shoes</a></li>
-                <li class="sidebar__item"><a class="sidebar__link" href="#">Accessories</a></li>
-                <li class="sidebar__item"><a class="sidebar__link" href="#">Activewear</a></li>
-                <li class="sidebar__item"><a class="sidebar__link" href="#">Gifts & Living</a></li>
-                <li class="sidebar__item"><a class="sidebar__link" href="#">Inspiration</a></li>
+                <li class="sidebar__item"><a class="sidebar__link icon1" href="#">New In</a></li>
+                <li class="sidebar__item"><a class="sidebar__link icon2" href="#">Clothing</a></li>
+                <li class="sidebar__item"><a class="sidebar__link icon3" href="#">Shoes</a></li>
+                <li class="sidebar__item"><a class="sidebar__link icon4" href="#">Accessories</a></li>
+                <li class="sidebar__item"><a class="sidebar__link icon5" href="#">Activewear</a></li>
+                <li class="sidebar__item"><a class="sidebar__link icon6" href="#">Gifts & Living</a></li>
+                <li class="sidebar__item"><a class="sidebar__link icon7" href="#">Inspiration</a></li>
             </ul>
         </aside>
         <section class="sale">
@@ -117,10 +117,18 @@
         </section>
     </div>
 </main>
-<footer class="footer-box">
+<footer class="footer">
     <div class="container">
-        <button type="button"></button>
-        <a class="help" href="#">Help Center</a>
+        <div class="help-box">
+            <button class="help-box__btn" type="button">
+                <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="23.5649" cy="24.0305" r="23.5649" fill="#F6F6F6"/>
+                    <path d="M30.562 26.7443C30.7093 26.4334 30.8373 26.1166 30.9468 25.7947H30.9187C32.8369 20.1564 28.8029 14.2305 22.8475 13.9419C22.8474 13.9416 22.8473 13.9413 22.8472 13.941C17.723 13.7046 13.4657 17.8131 13.4657 22.9077C13.4657 27.8534 17.4796 31.8772 22.4167 31.8843C23.7558 31.8825 25.0394 31.5938 26.2363 31.0253C30.9083 31.9502 30.544 31.8845 30.6513 31.8845C31.1368 31.8845 31.4995 31.4389 31.4047 30.9642L30.562 26.7443Z"
+                          fill="black"/>
+                </svg>
+            </button>
+            <a class="help-box__link" href="#">Help Center</a>
+        </div>
     </div>
 </footer>
 
