added store section

--- a/index.html
+++ b/index.html
@@ -95,25 +95,48 @@
                 <li class="sidebar__item"><a class="sidebar__link icon7" href="#">Inspiration</a></li>
             </ul>
         </aside>
-        <section class="sale">
-            <div class="sale__item">
-                <h2 class="sale__item-title">Get up to 50% off</h2>
+        <section class="store">
+            <div class="store-wrap">
+                <div class="store-box">
+                    <div class="store__item item1">
+                        <img class="store__item-pic" src="./img/sale.svg" alt="Sale banner">
+                        <h2 class="store__item-title sale-title">Get up to 50% off</h2>
+                    </div>
+                    <div class="store__item item2">
+                        <img class="store__item-pic" src="./img/summer-sale.svg" alt="Summer sale banner">
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="cards__item">
+                        <img class="cards__item-pic" src="img/pink-girl.jpg" alt="Pink girl">
+                    </div>
+                    <div class="cards__item">
+                        <img class="cards__item-pic" src="./img/curly-girl.jpg" alt="Curly girl">
+                    </div>
+                </div>
             </div>
-            <div class="sale__item"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-        </section>
-        <section class="trendy">
-            <div class="trendy__item">
-                <h2 class="trendy__item-title">Trending & Hot</h2>
-                <p class="trendy__item-text">A collection of most trending items.</p>
+            <div class="store-wrap">
+                <div class="store-box">
+                    <div class="store__item item3">
+                        <img class="store__item-pic" src="./img/blue-girl.jpg" alt="Blue girl">
+                        <h2 class="store__item-title trend-title title1">Trending & Hot</h2>
+                        <p class="store__item-text">A collection of most trending items.</p>
+                    </div>
+                    <div class="store__item item4">
+                        <img class="store__item-pic" src="./img/red-girl.jpg" alt="Red girl">
+                        <h2 class="store__item-title trend-title title2">Buy it for the first time</h2>
+                        <p class="store__item-text">New in store. Try it before anyone else.</p>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="cards__item">
+                        <img class="cards__item-pic" src="./img/party-girl.jpg" alt="Party girl">
+                    </div>
+                    <div class="cards__item">
+                        <img class="cards__item-pic" src="./img/white-girl.jpg" alt="White girl">
+                    </div>
+                </div>
             </div>
-            <div class="trendy__item">
-                <h2 class="trendy__item-title">Buy it for the first time</h2>
-                <p class="trendy__item-text">New in store. Try it before anyone else.</p>
-            </div>
-            <div class="card"></div>
-            <div class="card"></div>
         </section>
     </div>
 </main>
